--- a/app/src/main/res/layout/fragment_percursos.xml
+++ b/app/src/main/res/layout/fragment_percursos.xml
@@ -9,8 +9,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPercursos"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="630dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,11 +19,12 @@
         android:id="@+id/floatingActionButtonPercurso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginStart="320dp"
+        android:layout_marginBottom="48dp"
         android:clickable="true"
+        android:elevation="1dp"
         android:src="@drawable/ic_baseline_add_circle_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPercursos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
