--- a/app/src/main/res/layout/row_participante.xml
+++ b/app/src/main/res/layout/row_participante.xml
@@ -10,11 +10,12 @@
 
     <TextView
         android:id="@+id/textViewNameParticipante"
-        android:layout_width="86dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="115dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="60dp"
         android:text="TextView"
+        android:textSize="25dp"
         app:layout_constraintStart_toEndOf="@+id/imageViewParticipanteRow"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,17 +29,16 @@
         android:text="TextView"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.904"
         app:layout_constraintStart_toEndOf="@+id/textViewNameParticipante"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewParticipanteRow"
-        android:layout_width="116dp"
-        android:layout_height="117dp"
+        android:layout_width="126dp"
+        android:layout_height="126dp"
         android:layout_marginStart="15dp"
-
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toStartOf="@+id/textViewNameParticipante"
         app:layout_constraintStart_toStartOf="parent"
