--- a/app/src/main/res/layout/fragment_new_participante.xml
+++ b/app/src/main/res/layout/fragment_new_participante.xml
@@ -17,6 +17,7 @@
         android:elevation="1dp"
         android:src="@drawable/custom_account"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.009"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/custom_account" />
